# BedrockStarter

./: .clangd  .clangd.example  .gitignore  Dockerfile  README.md  bedrock.service  docker-compose.yml  launch.sh  multipass.yaml  setup.sh  start.sh
.github/workflows/: clang-tidy.yml  cpp-tests.yml
scripts/: clang-tidy.sh  common.sh  install-cpp-deps.sh  launch.sh  setup.sh  shellcheck.sh  sql.sh  test-cpp.sh  watch-logs.sh
server/api/: Dockerfile  Log.php  api.php  composer.json  nginx.conf  start.sh
server/core/: CMakeLists.txt  Core.cpp  Core.h  Dockerfile  bedrock.service
server/core/commands/: CreateMessage.cpp  GetMessages.cpp  HelloWorld.cpp  HelloWorld.h
